--- a/OnlineTicTacToe/nbproject/private/private.properties
+++ b/OnlineTicTacToe/nbproject/private/private.properties
@@ -1,2 +1,7 @@
+application.args=localhost 12345
 compile.on.save=true
-user.properties.file=C:\\Users\\hildebj\\.netbeans\\7.1\\build.properties
+do.depend=false
+do.jar=true
+javac.debug=true
+javadoc.preview=true
+user.properties.file=C:\\Users\\hildebrantj-da.WZ\\.netbeans\\7.1\\build.properties
