--- a/OnlineTicTacToe/nbproject/private/private.properties
+++ b/OnlineTicTacToe/nbproject/private/private.properties
@@ -4,4 +4,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\hildebrantj-da.WZ\\.netbeans\\7.1\\build.properties
+user.properties.file=/Users/hildebj/.netbeans/7.0/build.properties
